# SparkExamAI

./: .gitignore  CMakeLists.txt  CMakeLists.txt.new  ConstructionPlanCheckPage.qml  DailyCourseContent.qml  DatabaseManager.cpp  DatabaseManager.cpp.bak  DatabaseManager.h  FaceCollectionPage.qml  FaceRecognizer.cpp  FaceRecognizer.h  FileManager.cpp  FileManager.h  LogManager.cpp  LogManager.h  LoginPage.qml  MainPage.qml  QuestionCollectionPage.qml  QuestionEnginePage.qml  QuestionPracticePage.qml  README.md  SerialDebugPage.qml  SerialPortManager.cpp  SerialPortManager.h  SparkAIAgentPage.qml  SparkExamAI.sln  SpecialTrainingPage.qml  VirtualKeyboard.qml  WorkTicketCheckPage.qml  app_icon.rc  deploy.bat  main.cpp  main.qml  main.qml.backup  main.qml.bak  qml.qrc  temp_output.txt
QXlsx/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  QXlsx.sln  QXlsx.vcxproj  QXlsx.vcxproj.filters  QXlsxQt5Config.cmake  cmake_install.cmake
QXlsx/QXlsx.dir/Debug/: QXlsxQt5.lib.recipe  _IsIncrementalBuild
QXlsx/QXlsx.dir/Debug/QXlsx.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  QXlsx.lastbuildstate
QXlsx/QXlsx_autogen/include_Debug/6OFTS6FJJP/: moc_xlsxdocument.cpp  moc_xlsxdocument.cpp.d
QuestionEngineSettings/: GeneralSettings.qml  KnowledgePointSettings.qml  PentagonalChartSettings.qml  QuestionBankSettings.qml  QuestionTypeSettings.qml  SettingItem.qml  StrategiesSettings.qml  UserPermissionsSettings.qml
SparkExamAI/: FaceRecognizer.cpp
build-msvc/: CMakeCache.txt
build-qt6/: CMakeCache.txt
build-qt6-msvc/: CMakeCache.txt
qml/: WorkTicketCheckPage.qml
templates/: README.txt  question_template.txt  导题模板.xlsx  智点模板.txt
